--- a/Contato.html
+++ b/Contato.html
@@ -57,6 +57,7 @@
     </form>
   </div>
   <footer class="bg-dark text-white text-center py-4">
+     &copy; 2025 Luanas Shoti - Todos os direitos reservados
     <div class="container">
       <div class="mb-3">
         <a href="https://www.instagram.com" target="_blank" class="text-white me-3" aria-label="Instagram">
@@ -70,5 +71,6 @@
   </footer>
 
 </body>
+
 
 </html>
