--- a/Home.html
+++ b/Home.html
@@ -55,7 +55,7 @@
   
  <!-- Rodapé -->
   <footer class="bg-dark text-white text-center py-3">
-    &copy; 2025 Luana Shoti - Todos os direitos reservados
+    &copy; 2025 Luanas Shoti - Todos os direitos reservados
   </footer>
 
   
@@ -63,5 +63,6 @@
     
             
 </body>
+
 
 </html>
