--- a/Sobre.html
+++ b/Sobre.html
@@ -67,10 +67,11 @@
 
 
   <footer class="bg-dark text-white text-center py-3">
-    &copy; 2025 Luanas Modas - Todos os direitos reservados
+     &copy; 2025 Luanas Shoti - Todos os direitos reservados
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
